--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -4,20 +4,20 @@ title: Projects
 
 # SIL AI & NLP Projects
 
+## [Augmented Quality Assessment (AQuA)](Projects/AQuA)
+
+The Augmented Quality Assessment (AQuA) tool assists translators in reviewing local language drafts by objectively 
+identifying potential issues and measuring a variety of relevant translation qualities.
+
 ## [M2 Chatbot Platform](Projects/chat)
 
 This platform allows users to build chatbots in a "multilingual first" manner, with one bot interacting in 
 multiple languages and cross lingual Natural Language Understanding (NLU).
 
-## [Serval](Projects/serval)
+## [Serval / Scripture Forge](Projects/serval)
 
 Serval brings together machine translation and quality estimation technologies into a common REST API 
 allowing them to be flexibly integrated into a variety tools used by translators and translation consultants.
-
-## [Augmented Quality Assessment (AQuA)](Projects/AQuA)
-
-The Augmented Quality Assessment (AQuA) tool assists translators in reviewing local language drafts by objectively 
-identifying potential issues and measuring a variety of relevant translation qualities.
 
 ## [tools.bible](Projects/bible-tools)
 
@@ -25,3 +25,7 @@ Tools.Bible was created to offer an easy-to-use centralized library of all tools
 ecosystem. We have gathered data on features, capabilities, use-cases, and even testimonials from those who have 
 first-hand experience using them on translation projects, making all that critical information searchable so that 
 you can find the tools you need today.
+
+## [Acts 2](Projects/acts2)
+
+Acts 2 is our translation service aimed at non-scripture text and audio going out into a wide range of languages.
