--- a/src/pages/mai24.mdx
+++ b/src/pages/mai24.mdx
@@ -1,6 +1,6 @@
 ---
 redirect: true
-to: 'https://give.sil.org/give/531548/#!/donation/checkout?c_src=MissionalAIpostcard'
+to: 'https://z8ae9x9a.fwfmsites.com/'
 ---
 
-<meta http-equiv="refresh" content="0;url=https://give.sil.org/give/531548/#!/donation/checkout?c_src=MissionalAIpostcard" />
+<meta http-equiv="https://z8ae9x9a.fwfmsites.com/" />
