--- a/src/pages/mai24.mdx
+++ b/src/pages/mai24.mdx
@@ -3,4 +3,4 @@ redirect: true
 to: 'https://z8ae9x9a.fwfmsites.com/'
 ---
 
-<meta http-equiv="https://z8ae9x9a.fwfmsites.com/" />
+<meta http-equiv="refresh" content="0;url=https://z8ae9x9a.fwfmsites.com/" />
