Update opening AQuA paragraph

--- a/src/pages/Projects/AQuA.mdx
+++ b/src/pages/Projects/AQuA.mdx
@@ -6,10 +6,8 @@ import ReactPlayer from 'react-player'
 
 # Augmented Quality Assessment (AQuA)
 
-*We are currently piloting AQuA in a small number of Bible Translation field trials. 
-In early 2024, AQuA will be available to all interested users.
-If you would like to try out AQuA, please fill out this [contact form](../../contact) 
-to receive further instructions once the tool is ready for general use.*  
+<p style={{textAlign: 'center'}}><i>As of April 2024, anyone in the bible translation movement can apply for an AQuA account.
+Please email idx_aqua@sil.org to learn more.</i></p>
 
 <div style={{ display: 'flex', justifyContent: 'center', paddingBottom: '20px' }}>
   <ReactPlayer controls url='https://youtu.be/6MIDtmwJfZM?si=pNqMSr4ozVVKo8Eh' />
