Update AQuA page

--- a/src/pages/Projects/AQuA.mdx
+++ b/src/pages/Projects/AQuA.mdx
@@ -7,7 +7,7 @@ import ReactPlayer from 'react-player'
 # Augmented Quality Assessment (AQuA)
 
 <p style={{textAlign: 'center'}}><i>As of April 2024, anyone in the bible translation movement can apply for an AQuA account.
-Please email idx_aqua@sil.org to learn more.</i></p>
+Please email us at <a href="mailto:idx_aqua@sil.org">idx_aqua@sil.org</a> to learn more.</i></p>
 
 <div style={{ display: 'flex', justifyContent: 'center', paddingBottom: '20px' }}>
   <ReactPlayer controls url='https://youtu.be/6MIDtmwJfZM?si=pNqMSr4ozVVKo8Eh' />
@@ -19,20 +19,20 @@ AQuA is a copilot tool developed by SIL International that seeks to develop capa
 of translation quality assurance. 
 It harnesses artificial intelligence (AI) techniques, assisting translation teams in objectively assessing multiple facets 
 of translation quality by *enhancing* and *complementing* preexisting translation work. 
-AQuA is able to produce an increasingly detailed suite of quality-related diagnostics, 
-with several augmented quality assessment methods in the areas of accuracy, naturalness, and clarity.
+AQuA runs several augmented quality assessment methods in the areas of accuracy, naturalness, and clarity, which are then analyzed by
+translation teams to help them make more informed decisions about the quality of their translations.
 
-To this end, AQuA is creating:
+To this end, AQuA is creating tools for:
 
-1. an early warning system for **translators**, which will alert them to obvious problems so they can address them earlier in the translation process;
-2. power tools for translation **consultants**, which will allow them to do their checking work more thoroughly and more consistently;
-3. an equalizer for **administrators and strategists**, which will allow them to compare and evaluate methodologies and products on an equal footing (including new AI-based translation methodologies proposed by TBTA, SIL, and Avodah).
+1. **translators**, aiding them in identifying obvious problems so they can address them earlier in the translation process;
+2. **church leaders** and **consultants**, allowing them to do their checking work more thoroughly and more consistently;
+3. **administrators** and **strategists**, helping them to compare and evaluate different methodologies and products (including new AI-based translation methodologies proposed by TBTA, SIL, and Avodah).
 
-By identifying anomalous passages in a draft, AQuA accelerates the quality assessment process by helping:
+By bringing attention to possible anomalous passages in a draft, AQuA accelerates the quality assessment process by helping:
 
-- translators make corrections (and produce an improved draft) prior to consultant checks;
-- consultants gain an “at-a-glance” understanding of quality across a draft and quickly dig into the relevant, granular quality issues; and
-- administrators and project managers track quality across projects to guide strategic allocations of checking resources.
+- **translators** make corrections (and produce an improved draft) prior to other quality checks;
+- **church leaders** and **consultants** gain an “at-a-glance” understanding of quality across a draft and quickly dig into the relevant, granular quality issues; and
+- **administrators** and **strategists** more easily track quality across projects to guide strategic allocations of checking resources.
 
 Our hope is that AQuA would empower translation teams in the quality checking process, 
 helping them to more easily spot the obvious errors, 
@@ -41,38 +41,29 @@ which in turn lets them focus more of their precious time and attention on the p
 ### AQuA as an AI Copilot
 
 We are seeing a recent explosion of interest in AI-driven tools that are paired as “copilots” with human workers. 
-These include copilots that are helping users to write code, find sales leads, draft legal documents, generate design ideas, 
-create lesson plans, and much more.
+These include copilots that are helping people to write code, draft emails, diagnose patients, write recipes, and much more.
 
 The use of the term copilot in these instances emphasizes two important points:
 
 1. A person is in control of the process (i.e., they are the pilot)
-2. The person's work is enhanced when it is assisted by AI-driven tooling (in terms of efficiency, thoroughness, creativity, or some other key performance indicator)
+2. The person's work is enhanced when it is assisted by the AI tool (in terms of efficiency, thoroughness, accuracy, creativity, etc)
 
-In Bible translation, there are individuals (like translators and consultants) who undergo years of specialty training 
-to diagnose quality issues in translation drafts. Computational methods, such as AQuA, are increasingly able 
-to help these translation experts locate anomalies and issues within translation drafts relating to the areas of accuracy, 
-naturalness, and clarity that would likely not have been found otherwise. 
-However, AQuA will fail to identify certain edge case quality issues in the areas of accuracy, naturalness, and clarity. 
-Furthermore, AQuA is not designed to diagnose issues related to many of the other important threads 
-of the multithreaded translation quality fabric. 
-For example, a tool like AQuA is of no help in assessing the beauty or acceptability of a translation. 
+In Bible translation, there are individuals such as church leaders, translators, and consultants, who undergo specialty training 
+to create high-quality translation drafts. AQuA, an AI quality-checking copilot, is able to help these translation experts 
+locate anomalies and issues within translation drafts relating to the areas of accuracy, naturalness, and clarity 
+that would likely not have been found otherwise.
 
-Therefore, AQuA acts as a copilot, helping stakeholders in the translation process 
-to more efficiently and thoroughly evaluate *certain qualities* of a draft translation.
-
-It is important to note that when a copilot like AQuA augments a translation team's capabilities, 
-the focus is not primarily on speeding up the work, even though that is often a nice bonus. 
-The real focus is on *improving the quality of what the translation team is able to do in the allotted amount of time*.
+It is important to note that AQuA is not designed to give insight into issues related to the other important qualities of a draft, 
+such as the beauty or acceptability of a translation. AQuA is a tool which helps stakeholders in the translation process 
+to more efficiently and thoroughly evaluate *certain qualities* of a draft translation; with the help of AQuA, teams can
+improve several qualities of their draft within the amount of time allotted to them.
 
 ### What does AQuA Measure?
 
-The quality of a translation is not a singular entity; 
-rather, it is best approached as a whole set of qualities that make up the warp and woof of a complex fabric. 
-With AQuA, we are not attempting to come up with a singular estimate of quality, but only to assess a variety of component qualities. 
-Even at that, we are not attempting to assess every quality, but only a selection of qualities that are within reach of AI.
+The quality of a translation is not a singular entity; rather, it is best approached as a whole set of different sub-qualities. 
+With AQuA, we are not attempting to come up with a singular estimate of quality, but only to assess a subset of these component qualities. 
 
-With AQuA, we do not purport to assess such qualities directly; 
+With AQuA, we do not assess these such-qualities directly; 
 we only deal with qualities that can be measured algorithmically and expressed as a number. 
 These measurable qualities are never an exact match to one of the abstract qualities (such as accuracy, naturalness, or clarity); 
 instead they work like *proxies for key aspects of the abstract qualities*. 
@@ -225,4 +216,9 @@ A list of AQuA assessments are provided below, grouped under the abstract qualit
   We then compare the model's answer to the expected answer from the dataset. 
   If the model's answer differs significantly from the expected answer, it suggests the possibility of missing or incomplete information within the verse.</p>
 </details>
+
+<p>
+  AQuA is currently available via a standalone web application, with plans to integrate into Clear Dashboard, Scripture Forge, and platform.bible.
+  If your team is interested in using AQuA, please email us at <a href="mailto:idx_aqua@sil.org">idx_aqua@sil.org</a>.
+</p>
 
