Update AQuA page

--- a/src/pages/projects/AQuA.mdx
+++ b/src/pages/projects/AQuA.mdx
@@ -13,7 +13,7 @@ Please email us at <a href="mailto:idx_aqua@sil.org">idx_aqua@sil.org</a> to lea
   <ReactPlayer controls url='https://youtu.be/6MIDtmwJfZM?si=pNqMSr4ozVVKo8Eh' />
 </div>
 
-### What is AQuA?
+## What is AQuA?
 
 AQuA is a copilot tool developed by SIL International that seeks to develop capacity and increase the thoroughness 
 of translation quality assurance. 
@@ -38,7 +38,9 @@ Our hope is that AQuA would empower translation teams in the quality checking pr
 helping them to more easily spot the obvious errors, 
 which in turn lets them focus more of their precious time and attention on the parts of a draft that really need their expertise.
 
-### AQuA as an AI Copilot
+![James Calibrated Word Correspondence](/img/james-wc-calibrated.png)
+
+## AQuA as an AI Copilot
 
 We are seeing a recent explosion of interest in AI-driven tools that are paired as “copilots” with human workers. 
 These include copilots that are helping people to write code, draft emails, diagnose patients, write recipes, and much more.
@@ -58,7 +60,9 @@ such as the beauty or acceptability of a translation. AQuA is a tool which helps
 to more efficiently and thoroughly evaluate *certain qualities* of a draft translation; with the help of AQuA, teams can
 improve several qualities of their draft within the amount of time allotted to them.
 
-### What does AQuA Measure?
+![Romans Missing Words](/img/missing-words-romans.png)
+
+## What does AQuA Measure?
 
 The quality of a translation is not a singular entity; rather, it is best approached as a whole set of different sub-qualities. 
 With AQuA, we are not attempting to come up with a singular estimate of quality, but only to assess a subset of these component qualities. 
@@ -70,11 +74,13 @@ instead they work like *proxies for key aspects of the abstract qualities*.
 For example, the AQuA metrics for Word Correspondence and Semantic Similarity are both quantifiable measures 
 that relate to the accuracy of a translation, but do not give a full picture of its accuracy.
 
-### Methods of Assessment 
+![Acts Scatterplot](/img/acts-scatterplot.png)
+
+## Methods of Assessment 
 
 A list of AQuA assessments are provided below, grouped under the abstract qualities of accuracy, naturalness, and clarity:
 
-#### Accuracy
+### ACCURACY
 
 <details>
   <summary><h5>Word Correspondence</h5></summary>
@@ -170,7 +176,7 @@ A list of AQuA assessments are provided below, grouped under the abstract qualit
 
 
 
-#### Naturalness
+### NATURALNESS
 
 <details>
   <summary><h5>Sentence and Word Length (Lix Readability)</h5></summary>
@@ -199,7 +205,7 @@ A list of AQuA assessments are provided below, grouped under the abstract qualit
   This assessment does not take into account word choice or syntax, which also factor into a text's readability.</p> 
 </details>
 
-#### Clarity
+### CLARITY
 
 <details>
   <summary><h5>Comprehensibility (Coming Soon)</h5></summary>
