--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -4,9 +4,9 @@ title: Projects
 
 # SIL AI & NLP Projects
 
-## [Augmented Quality Assessment (AQuA)](projects/AQuA)
+## [AQuA: Augmented Quality Assessment](projects/AQuA)
 
-The Augmented Quality Assessment (AQuA) tool assists translators in reviewing local language drafts by objectively 
+The AQuA tool assists translators in reviewing local language drafts by objectively 
 identifying potential issues and measuring a variety of relevant translation qualities.
 
 ## [M2 Chatbot Platform](projects/chat)
@@ -29,3 +29,8 @@ you can find the tools you need today.
 ## [Acts 2](projects/acts2)
 
 Acts 2 is our translation service aimed at non-scripture text and audio going out into a wide range of languages.
+
+## [AERO: AI Enhancements Responsive to Orality](projects/AERO)
+
+AERO is a set of tools for tool developers and users that meet the needs of oral language communities.
+
