--- a/src/pages/projects/AQuA.mdx
+++ b/src/pages/projects/AQuA.mdx
@@ -4,7 +4,7 @@ title: AQuA
 
 import ReactPlayer from 'react-player'
 
-# Augmented Quality Assessment (AQuA)
+# AQuA: Augmented Quality Assessment
 
 <p style={{textAlign: 'center'}}><i>As of April 2024, anyone in the bible translation movement can apply for an AQuA account.
 Please email us at <a href="mailto:idx_aqua@sil.org">idx_aqua@sil.org</a> to learn more.</i></p>
