--- a/src/pages/projects/AERO.mdx
+++ b/src/pages/projects/AERO.mdx
@@ -177,3 +177,11 @@ Again, we find almost all of the above are also useful to multimodal language co
     </li>
 </ul>
 
+<div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center' }}>
+  <img src="/img/AI_workflows_brighter.drawio(1).png" alt="AI workflows chart" style={{ width: '80%', marginBottom: '10px' }} />
+</div>
+
+<p class="caption">
+    An example layout of how AERO tools might connect to OBT processes for different expressions of orality
+</p>
+
