--- a/src/pages/projects/acts2.mdx
+++ b/src/pages/projects/acts2.mdx
@@ -31,11 +31,11 @@ different translation models and run their own text-to-speech.
   <img src="/img/acts2-swh-ethics.png" alt="Acts2 translating into Swahili" style={{ width: '80%', marginBottom: '10px' }} />
 </div>
 
-Users can select from actively available models in around 200 languages, 
+Users can select from models available in around 200 languages, 
 with hundreds more available upon request. While some models are only available for non-profit use 
 due to their licensing terms, the majority of languages covered by Acts2 do have at least one model 
 available which is licensed for commercial use. New models can also be fine-tuned upon request 
-where permissively licenced parallel corpora are available. 
+where permissively licensed parallel corpora are available. 
 
 As a professional service, Acts2 aims to make the translation process easy and painless. 
 We have expanded the range of upload and download options accepted by Acts2, 
