--- a/src/pages/projects/lynx.mdx
+++ b/src/pages/projects/lynx.mdx
@@ -28,7 +28,7 @@ Our goal is to use technology to simplify translation processes.
 Translators will still need to use their expertise to make the best translation decisions. 
 Lynx will prioritize tools that make resources and data more accessible by following the following principles:
 
-- **Simplicity vs. Complexity**: Bible Translation tools and be complex, and AI tools often generate 
+- **Simplicity vs. Complexity**: Bible Translation tools can be complex, and AI tools often generate 
 complex outputs—statistics, probabilities, and intricate visualizations. 
 But for mother tongue translators, simplicity matters. Lynx distills AI insights 
 into easily understandable suggestions, ensuring clarity and usability.
