fix projects page

--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -4,33 +4,37 @@ title: Projects
 
 # SIL AI & NLP Projects
 
-## [AQuA: Augmented Quality Assessment](projects/AQuA)
-
-The AQuA tool assists translators in reviewing local language drafts by objectively 
-identifying potential issues and measuring a variety of relevant translation qualities.
-
-## [M2 Chatbot Platform](projects/chat)
-
-This platform allows users to build chatbots in a "multilingual first" manner, with one bot interacting in 
-multiple languages and cross lingual Natural Language Understanding (NLU).
-
-## [Serval / Scripture Forge](projects/serval)
-
-Serval brings together machine translation and quality estimation technologies into a common REST API 
-allowing them to be flexibly integrated into a variety tools used by translators and translation consultants.
-
-## [tools.bible](projects/bible-tools)
-
-Tools.Bible was created to offer an easy-to-use centralized library of all tools available in the Bible translation 
-ecosystem. We have gathered data on features, capabilities, use-cases, and even testimonials from those who have 
-first-hand experience using them on translation projects, making all that critical information searchable so that 
-you can find the tools you need today.
 
 ## [Acts 2](projects/acts2)
-
 Acts 2 is our translation service aimed at non-scripture text and audio going out into a wide range of languages.
 
-## [AERO: AI Enhancements Responsive to Orality](projects/AERO)
 
-AERO is a set of tools for tool developers and users that meet the needs of oral language communities.
+## [AERO: AI Enhancements Responsive to Orality](projects/AERO)
+AERO is a set of tools for tool developers and users that meets the needs of oral language communities.
+
+
+## [AQuA: Augmented Quality Assessment](projects/AQuA)
+AQuA is a quality assurance copilot tool which assists translation teams in reviewing local language drafts 
+by bringing attention to potential issues and helping them gain insights into the quality of the translation.
+
+## [Lynx (coming soon)](projects/lynx)
+Lynx is a framework that seamlessly weaves AI tools into Bible translation editing software. 
+
+
+## [M2 Chatbot Platform](projects/chat)
+M2 is a platform which allows users to build chatbots in a "multilingual first" manner, with one bot interacting in 
+multiple languages and cross lingual Natural Language Understanding (NLU).
+
+
+## [Scripture Forge](projects/scriptureforge)
+Scripture Forge is an online app for team-based Bible translation, featuring AI help and tools for community review.
+
+
+## [Serval](projects/serval)
+Serval is a platform which provides API access to multiple AI and Natural Language Processing (NLP) tools developed at SIL and beyond.
+
+
+## [tools.bible](projects/bible-tools)
+tools.bible is a platform which offers an easy-to-use centralized library of all tools available in the Bible 
+translation ecosystem. 
 
