--- a/src/pages/projects/AQuA.mdx
+++ b/src/pages/projects/AQuA.mdx
@@ -18,7 +18,7 @@ Please email us at <a href="mailto:idx_aqua@sil.org">idx_aqua@sil.org</a> to lea
 AQuA is a copilot tool developed by SIL International that seeks to develop capacity and increase the thoroughness 
 of translation quality assurance. 
 It harnesses artificial intelligence (AI) techniques, assisting translation teams in objectively assessing multiple facets 
-of translation quality by *enhancing* and *complementing* preexisting translation work. 
+of translation quality by *enhancing* and *complementing* preexisting quality assurance work. 
 AQuA runs several augmented quality assessment methods in the areas of accuracy, naturalness, and clarity, which are then analyzed by
 translation teams to help them make more informed decisions about the quality of their translations.
 
@@ -224,7 +224,8 @@ A list of AQuA assessments are provided below, grouped under the abstract qualit
 </details>
 
 <p>
-  AQuA is currently available via a standalone web application, with plans to integrate into Clear Dashboard, Scripture Forge, and platform.bible.
+  AQuA is currently available via a standalone web application, with plans to integrate into 
+  <a href="/projects/scriptureforge" target="_blank"> Scripture Forge</a> and platform.bible.
   If your team is interested in using AQuA, please email us at <a href="mailto:idx_aqua@sil.org">idx_aqua@sil.org</a>.
 </p>
 
