SIL International --> SIL Global

--- a/src/pages/projects/AQuA.mdx
+++ b/src/pages/projects/AQuA.mdx
@@ -15,7 +15,7 @@ Please email us at <a href="mailto:idx_aqua@sil.org">idx_aqua@sil.org</a> to lea
 
 ## What is AQuA?
 
-AQuA is a copilot tool developed by SIL International that seeks to develop capacity and increase the thoroughness 
+AQuA is a copilot tool developed by SIL Global that seeks to develop capacity and increase the thoroughness 
 of translation quality assurance. 
 It harnesses artificial intelligence (AI) techniques, assisting translation teams in objectively assessing multiple facets 
 of translation quality by *enhancing* and *complementing* preexisting quality assurance work. 
