Fix contact link

--- a/src/pages/projects/acts2.mdx
+++ b/src/pages/projects/acts2.mdx
@@ -75,4 +75,4 @@ across this range. We are actively in the process of training new text-to-speech
 to provide higher quality and an even broader range of languages. 
 A complete price sheet by language for translation and text-to-speech can be found here: <u><a href="https://docs.google.com/spreadsheets/d/1-F8s5Mvgke-EtUhGwXkJVpKQizz9hpYOg9P2YX8JmSY/edit?usp=sharing" target="_blank">Acts2 Pricing Sheet</a></u>
 
-For more information on Acts2, including how you can sign up for a trial account, fill out our contact form at <u><a href="https://www.ai.sil.org/contact" target="_blank">ai.sil.org/contact</a></u>.
+For more information on Acts2, including how you can sign up for a trial account, fill out our contact form at <u><a href="https://ai.sil.org/contact" target="_blank">ai.sil.org/contact</a></u>.
