--- a/src/pages/projects/acts2.mdx
+++ b/src/pages/projects/acts2.mdx
@@ -4,44 +4,45 @@ title: Acts 2
 
 # Acts2
 
-Acts2 is a service that leverages the latest advances in Artificial Intelligence 
-to provide state-of-the-art translation and text-to-speech into a wide range of languages. 
-While SIL’s Serval and Scripture Forge focus on machine translation for Biblical text, 
-Acts2 builds upon these tools and extends their capabilities to work with materials related 
-to education, development, trauma healing, anti-trafficking and more. 
+Acts2 is a service that leverages the latest advances in Artificial Intelligence to provide state-of-the-art 
+translation and text-to-speech into a wide range of languages. While SIL’s Serval and Scripture Forge 
+focus on machine translation for Biblical text, Acts2 builds upon these tools. It extends their capabilities 
+to work with materials related to education, development, trauma healing, anti-trafficking, and more. 
+
 
 The inspiration for ‘Acts2’ comes from the description of Pentecost found in that chapter of the Bible 
-where we see God’s heart for connecting with people in their own language. 
-The last several years have seen tremendous advances in machine translation capabilities 
-for high resource languages, however, the same level of progress has not yet been seen 
-for lower resource languages. This has largely been due to lower levels of data availability 
-and less economic demand for translation into languages with fewer speakers. 
-With Acts2, we are able to make use of SIL’s extensive multilingual parallel data 
-from Scripture translations and other sources. We use these data to fine-tune machine translation models 
-that achieve better results in low resource languages, helping to bridge the gap faced 
-by these traditionally underserved language communities.
+where we see God’s heart for connecting with people in their own language. The last several years have seen 
+tremendous advances in machine translation capabilities for high-resource languages, however, 
+the same level of progress has not yet been seen for lower-resource languages. This has largely been due to 
+lower levels of data availability and less economic demand for translation into languages with fewer speakers. 
+With Acts2, we are able to make use of SIL’s extensive multilingual parallel data from Scripture translations 
+and other sources. We use these data to fine-tune machine translation models that achieve better results 
+in low-resource languages, helping bridge the gap these traditionally underserved language communities face.
+
 
 ## Using Acts2
 
 Acts2 is now available through a UI and also via API. 
-We have trial user accounts available upon request which allow users to try out 
+We have trial user accounts available upon request where users can try out 
 different translation models and run their own text-to-speech. 
 
 <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center' }}>
-  <img src="/img/acts2-swh-ethics.png" alt="Acts2 translating into Swahili" style={{ width: '80%', marginBottom: '10px' }} />
+  <img src="/img/acts2-updated-ui.png" alt="Acts2 translating into Swahili" style={{ width: '80%', marginBottom: '40px'}} />
 </div>
 
-Users can select from models available in around 200 languages, 
-with hundreds more available upon request. While some models are only available for non-profit use 
-due to their licensing terms, the majority of languages covered by Acts2 do have at least one model 
-available which is licensed for commercial use. New models can also be fine-tuned upon request 
-where permissively licensed parallel corpora are available. 
+Users can select from currently available models in more than 200 languages, 
+with fine-tuned models for more than 1,400 languages in total available upon request. 
+While some models are only available for non-profit use due to their licensing terms, 
+the majority of languages covered by Acts2 do have at least one model available which is licensed 
+for commercial use. New models can also be fine-tuned on user-provided data when requested 
+for permissively licensed parallel corpora. 
 
 As a professional service, Acts2 aims to make the translation process easy and painless. 
-We have expanded the range of upload and download options accepted by Acts2, 
-and now support SFM and docx (experimental) file types, in addition to CSVs, text files, 
-and an option for pasting in text directly. We've also made it possible for text-to-speech 
-to be used directly on uploaded text, rather than only on translated text. 
+We have expanded the range of upload and download options accepted by Acts2, and now support SFM and docx 
+(experimental) file types, in addition to CSVs, text files, and an option for pasting in text directly. 
+We've also made it possible for text-to-speech to be used directly on uploaded text, rather than only 
+on translated text. 
+ 
 
 ## Reviewing results
 
@@ -51,28 +52,32 @@ can be completed directly within the Acts2 UI. This makes it easier to manage tr
 while also providing feedback which can be incorporated into model improvements. 
 
 <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center' }}>
-  <img src="/img/acts2-review.png" alt="Acts2 translating into Swahili" style={{ width: '80%', marginBottom: '10px' }} />
+  <img src="/img/acts2-review.png" alt="Acts2 translating into Swahili" style={{ width: '80%', marginBottom: '40px' }} />
 </div>
 
 ## Pricing
 
 We aim to provide affordable and competitive pricing for Acts2 services. 
-Two price tiers are available for translation, allowing for flexibility according to budget and project needs. 
-The Professional tier offers the greatest support, covering hundreds of languages, 
-several translation model options, and rapidly developing experimental features 
-including translation suggestions, HTML tag preservation, and a glossary feature. 
-It starts at 0.2 cents per word for the first 1 million words, and is half that much after 1 million words. 
-The Basic tier is an ultra low cost alternative, providing only translation in up to 60 languages 
-starting at 0.028 cents per word and also dropping to half price after 1 million words. 
+Three tiers are available for translation, allowing for flexibility according to budget and project needs. 
+The Professional tier offers the best support for most projects, covering hundreds of languages, 
+several translation model options, and rapidly developing experimental features, including translation 
+suggestions, HTML/docx/SFM formatting preservation, and a glossary feature. It starts at US 0.2 cents 
+per word for the first 1 million words and is half that much after 1 million words. 
+Custom fine-tuned models in up to 1,400 languages are available upon request at 1 cent per word 
+for the first 1 million words and 0.5 cents per word after that. The Basic tier is an ultra-low-cost 
+alternative, providing only translation in up to 60 languages starting at 0.028 cents per word and also 
+dropping to half price after 1 million words. 
 
 <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center' }}>
-  <img src="/img/acts2-pricing.png" alt="Acts2 translating into Swahili" style={{ width: '80%', marginBottom: '10px' }} />
+  <img src="/img/acts2-pricing.png" alt="Acts2 translating into Swahili" style={{ width: '80%', marginBottom: '40px' }} />
 </div>
 
-Text-to-speech pricing ranges from $0.14/minute to $1.14/minute depending upon the language. 
+Text-to-speech pricing ranges from $0.14/minute to $1.14/minute depending on the language. 
 While this service is available in over 1,000 languages, quality is known to vary considerably 
-across this range. We are actively in the process of training new text-to-speech models 
-to provide higher quality and an even broader range of languages. 
-A complete price sheet by language for translation and text-to-speech can be found here: <u><a href="https://docs.google.com/spreadsheets/d/1-F8s5Mvgke-EtUhGwXkJVpKQizz9hpYOg9P2YX8JmSY/edit?usp=sharing" target="_blank">Acts2 Pricing Sheet</a></u>
+across this range. We are actively in the process of training new text-to-speech models to provide 
+higher quality and an even broader range of languages.
+A complete price sheet by language for translation and text-to-speech can be found 
+here: <u><a href="https://docs.google.com/spreadsheets/d/1-F8s5Mvgke-EtUhGwXkJVpKQizz9hpYOg9P2YX8JmSY/edit?usp=sharing" target="_blank">Acts2 Pricing Sheet</a></u>
 
-For more information on Acts2, including how you can sign up for a trial account, fill out our contact form at <u><a href="https://ai.sil.org/contact" target="_blank">ai.sil.org/contact</a></u>.
+For more information on Acts2, including how you can sign up for a free trial account, 
+fill out our contact form at <u><a href="https://ai.sil.org/contact" target="_blank">ai.sil.org/contact</a></u>.
