--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -17,6 +17,9 @@ AERO is a set of tools for tool developers and users that meets the needs of ora
 AQuA is a quality assurance copilot tool which assists translation teams in reviewing local language drafts 
 by bringing attention to potential issues and helping them gain insights into the quality of the translation.
 
+## [Faithbridge](projects/faithbridge)
+Faithbridge is a chatbot that allows users to interact with a set of ground-truth Bible translation resources.
+
 ## [Lynx (coming soon)](projects/lynx)
 Lynx is a framework that seamlessly weaves AI tools into Bible translation editing software. 
 
