--- a/src/pages/projects/acts2.mdx
+++ b/src/pages/projects/acts2.mdx
@@ -9,7 +9,6 @@ translation and text-to-speech into a wide range of languages. While SIL’s Ser
 focus on machine translation for Biblical text, Acts2 builds upon these tools. It extends their capabilities 
 to work with materials related to education, development, trauma healing, anti-trafficking, and more. 
 
-
 The inspiration for ‘Acts2’ comes from the description of Pentecost found in that chapter of the Bible 
 where we see God’s heart for connecting with people in their own language. The last several years have seen 
 tremendous advances in machine translation capabilities for high-resource languages, however, 
@@ -18,6 +17,16 @@ lower levels of data availability and less economic demand for translation into 
 With Acts2, we are able to make use of SIL’s extensive multilingual parallel data from Scripture translations 
 and other sources. We use these data to fine-tune machine translation models that achieve better results 
 in low-resource languages, helping bridge the gap these traditionally underserved language communities face.
+
+<Button 
+  label="TRY ACTS2" 
+  target="_blank" 
+  link="https://acts2.multilingualai.com/login/?next=/" 
+  style={{ 
+    marginTop: '10px',
+    marginBottom: '10px', 
+    }}
+/>
 
 
 ## Using Acts2
@@ -78,6 +87,16 @@ across this range. We are actively in the process of training new text-to-speech
 higher quality and an even broader range of languages.
 A complete price sheet by language for translation and text-to-speech can be found 
 here: <u><a href="https://docs.google.com/spreadsheets/d/1-F8s5Mvgke-EtUhGwXkJVpKQizz9hpYOg9P2YX8JmSY/edit?usp=sharing" target="_blank">Acts2 Pricing Sheet</a></u>
+
+<Button 
+  label="TRY ACTS2" 
+  target="_blank" 
+  link="https://acts2.multilingualai.com/login/?next=/" 
+  style={{ 
+    marginTop: '10px',
+    marginBottom: '30px', 
+    }}
+/>
 
 For more information on Acts2, including how you can sign up for a free trial account, 
 fill out our contact form at <u><a href="https://ai.sil.org/contact" target="_blank">ai.sil.org/contact</a></u>.
