--- a/src/pages/projects/faithbridge.mdx
+++ b/src/pages/projects/faithbridge.mdx
@@ -26,7 +26,7 @@ to give real-time feedback and suggestions to Online Missionaries engaged in dig
 <Button 
   label="TRY FAITHBRIDGE" 
   target="_blank" 
-  link="https://acts2.multilingualai.com/login/?next=/" 
+  link="https://faithbridge.multilingualai.com" 
   style={{ 
     marginTop: '10px',
     marginBottom: '10px', 
