--- a/src/pages/projects/acts2.mdx
+++ b/src/pages/projects/acts2.mdx
@@ -21,7 +21,7 @@ in low-resource languages, helping bridge the gap these traditionally underserve
 <Button 
   label="TRY ACTS2" 
   target="_blank" 
-  link="https://acts2.multilingualai.com/login/?next=/" 
+  link="https://acts2.multilingualai.com" 
   style={{ 
     marginTop: '10px',
     marginBottom: '10px', 
@@ -91,7 +91,7 @@ here: <u><a href="https://docs.google.com/spreadsheets/d/1-F8s5Mvgke-EtUhGwXkJVp
 <Button 
   label="TRY ACTS2" 
   target="_blank" 
-  link="https://acts2.multilingualai.com/login/?next=/" 
+  link="https://acts2.multilingualai.com" 
   style={{ 
     marginTop: '10px',
     marginBottom: '30px', 
