Tie up some loose ends

--- a/src/pages/projects.mdx
+++ b/src/pages/projects.mdx
@@ -5,8 +5,8 @@ title: Projects
 # SIL AI & NLP Projects
 
 
-## [Acts 2](projects/acts2)
-Acts 2 is our translation service aimed at non-scripture text and audio going out into a wide range of languages.
+## [Alpha2](projects/alpha2)
+Alpha2 is our translation service aimed at non-scripture text and audio going out into a wide range of languages.
 
 
 ## [AERO: AI Enhancements Responsive to Orality](projects/AERO)
