--- a/src/pages/projects/AERO.mdx
+++ b/src/pages/projects/AERO.mdx
@@ -168,7 +168,7 @@ Again, we find almost all of the above are also useful to multimodal language co
             As we collect even more audio, <b>text-to-speech models</b> can be trained on a new language. 
             This enables us to produce new models for text-to-speech. 
             Those models can be used 
-            in <u><a href="/projects/acts2" target="_blank">Acts2</a></u> for 
+            in <u><a href="/projects/acts2" target="_blank">Alpha2</a></u> for 
             many purposes beyond Bible Translation, 
             including producing materials for increased Bible engagement, trauma healing, 
             and literacy (to name a few). Additionally, 
