--- a/src/pages/projects/chat.mdx
+++ b/src/pages/projects/chat.mdx
@@ -17,7 +17,7 @@ Expanding your chatbot to multiple languages is seamless with M2:
 
 - One primary language chatflow is replicated into as many secondary languages as desired.
 - Any changes to the primary language chatflow are instantly reflected across all languages.
-- Acts2 translation suggestions makes adding new languages even easier.
+- Alpha2 translation suggestions makes adding new languages even easier.
 
 M2 makes collaboration with distributed teams simple and efficient:
 
