--- a/src/pages/projects/AQuA.mdx
+++ b/src/pages/projects/AQuA.mdx
@@ -13,7 +13,7 @@ Please email us at <a href="mailto:idx_aqua@sil.org">idx_aqua@sil.org</a> to lea
   <ReactPlayer controls url='https://youtu.be/6MIDtmwJfZM?si=pNqMSr4ozVVKo8Eh' />
 </div>
 
-## What is AQuA??
+## What is AQuA?
 
 AQuA is a copilot tool developed by SIL Global that seeks to develop capacity and increase the thoroughness 
 of translation quality assurance. 
