--- a/src/pages/projects/chat.mdx
+++ b/src/pages/projects/chat.mdx
@@ -29,7 +29,7 @@ Gain valuable insights with comprehensive & unified analytics:
 - Track chatbot analytics across all languages to get a complete picture.
 - Compare traffic and conversion rates to optimize your chatflow.
 
-Deploy your M2 chatbot through various channels:
+Deploy your M2 chatbot through various channels, including:
 
 - Facebook Messenger
 - Embed a chat widget on your website 
