--- a/src/pages/projects/chat.mdx
+++ b/src/pages/projects/chat.mdx
@@ -40,7 +40,8 @@ Current organizations who trust M2 for their chatbot needs:
 - Christian Vision (CV)
 - Global Media Outreach (GMO)
 
-Discover how M2 can transform your chatbot strategy with unmatched multilingual support and seamless integration. Explore M2 today and elevate your customer engagement to new heights.
+Discover how M2 can transform your chatbot strategy with unmatched multilingual support and seamless integration. 
+Explore M2 today and elevate your customer engagement to new heights.
 
 
 
