Updated acts2.mdx and alpha2.mdx to remove pentecost language and add pptx support

--- a/src/pages/projects/acts2.mdx
+++ b/src/pages/projects/acts2.mdx
@@ -9,10 +9,8 @@ translation and text-to-speech into a wide range of languages. While SIL’s Ser
 focus on machine translation for Biblical text, Alpha2 builds upon these tools. It extends their capabilities 
 to work with materials related to education, development, trauma healing, anti-trafficking, and more. 
 
-The inspiration for Alpha2 (formerly ‘Acts2’) comes from the description of Pentecost found in that chapter of the Bible 
-where we see God’s heart for connecting with people in their own language. The last several years have seen 
-tremendous advances in machine translation capabilities for high-resource languages, however, 
-the same level of progress has not yet been seen for lower-resource languages. This has largely been due to 
+The last several years have seen tremendous advances in machine translation capabilities for high-resource languages, 
+however, the same level of progress has not yet been seen for lower-resource languages. This has largely been due to 
 lower levels of data availability and less economic demand for translation into languages with fewer speakers. 
 With Alpha2, we are able to make use of SIL’s extensive multilingual parallel data from Scripture translations 
 and other sources. We use these data to fine-tune machine translation models that achieve better results 
@@ -47,10 +45,10 @@ for commercial use. New models can also be fine-tuned on user-provided data when
 for permissively licensed parallel corpora. 
 
 As a professional service, Alpha2 aims to make the translation process easy and painless. 
-We have expanded the range of upload and download options accepted by Alpha2, and now support SFM and docx 
-(experimental) file types, in addition to CSVs, text files, and an option for pasting in text directly. 
-We've also made it possible for text-to-speech to be used directly on uploaded text, rather than only 
-on translated text. 
+We have expanded the range of upload and download options accepted by Alpha2, and now support SFM,
+Word documents (docx), and Powerpoint presentations (pptx) file types, in addition to CSVs, text files, 
+and an option for pasting in text directly. We've also made it possible for text-to-speech to be 
+used directly on uploaded text, rather than only on translated text. 
  
 
 ## Reviewing results
