Rename image files from acts2 to alpha2
- Renamed acts2-pricing.png to alpha2-pricing.png
- Renamed acts2-review.png to alpha2-review.png
- Renamed acts2-swh-ethics.png to alpha2-swh-ethics.png
- Renamed acts2-updated-ui.png to alpha2-updated-ui.png
- Updated image references in alpha2.mdx to match new filenames

--- a/src/pages/projects/alpha2.mdx
+++ b/src/pages/projects/alpha2.mdx
@@ -30,7 +30,7 @@ in low-resource languages, helping bridge the gap these traditionally underserve
 Alpha2 is now available through <a href="https://alpha2.multilingualai.com">the website</a> and also via API by request. 
 
 <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center' }}>
-  <img src="/img/acts2-updated-ui.png" alt="Alpha2 translating into Swahili" style={{ width: '80%', marginBottom: '40px'}} />
+  <img src="/img/alpha2-updated-ui.png" alt="Alpha2 translating into Swahili" style={{ width: '80%', marginBottom: '40px'}} />
 </div>
 
 Users can select from currently available models in more than 200 languages, 
@@ -52,7 +52,7 @@ As an optional feature, this review, along with rating of translations from diff
 can be completed directly within the Alpha2 UI in order to provide feedback which can be incorporated into model improvements. 
 
 <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center' }}>
-  <img src="/img/acts2-review.png" alt="Alpha2 translating into Swahili" style={{ width: '80%', marginBottom: '40px' }} />
+  <img src="/img/alpha2-review.png" alt="Alpha2 translating into Swahili" style={{ width: '80%', marginBottom: '40px' }} />
 </div>
 
 ## Pricing
